# ub-cs-education-handbook

./: .gitignore  .pandoc-plot.yml  README.md  handbook.css  pyproject.toml
data/: alignments.yaml  courses.csv  learning_outcomes.csv  tracks.yaml
defaults/: base.yaml  handbook.yaml  html.yaml  pdf.yaml
source/: introduction.md  overview_of_graduate_programs.md  vision_and_goals.md
source/appendices/: changelog.md  csta_standards.md  field_experiences.md  resources.md  tpap.md
source/courses/: courses.md  dee_520.md  lai_508.md  lai_515.md  lai_516.md  lai_525.md  lai_551.md  lai_552.md  lai_562.md  lai_573.md  lai_574.md  lai_595.md  lai_600.md  lai_605.md  lai_611.md  lai_663.md  lai_667.md  lai_668.md  lai_674.md  lai_676.md  lai_677.md  lai_686.md  lai_698.md  lai_700.md  lai_XXX.md  lai_YYY.md
source/tracks/: advanced_certificate_track.md  advanced_certificate_track_for_in_service_teachers.md  initial_certificate_track.md  initial_professional_certificate_track.md  professional_certificate_track.md  tracks.md  ub_teach_track.md
tasks/: __init__.py  table_generation.py  writer.py
templates/: default.html  pdf_template.latex
tests/: test_data_writer.py
