[tool.poetry]
name = "ub-cs-education-handbook"
version = "1.0.0"
description = "UB's Computer Science Teacher Preparation Program Handbook"
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyaml = "^21.10.1"
more-itertools = "^8.12.0"
watchdog = "^2.2.1"
pandas = "^2.2.2"
invoke = "^2.2.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
